// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pretty Logging Will pretty log an object in context 1`] = `
"[90m┌─────────┬───────────────────────────┐[39m
[90m│[39m File    [90m│[39m [4m[32m/test/spec/pretty.test.js[39m[24m [90m│[39m
[90m├─────────┼───────────────────────────┤[39m
[90m│[39m Date    [90m│[39m [37m2018-05-18T16:25:57.815Z[39m  [90m│[39m
[90m├─────────┼───────────────────────────┤[39m
[90m│[39m Status  [90m│[39m [34mℹ info[39m                    [90m│[39m
[90m├─────────┼───────────────────────────┤[39m
[90m│[39m Message [90m│[39m [34mhello world[39m               [90m│[39m
[90m└─────────┴───────────────────────────┘[39m
{
  \\"context\\": {
    \\"custom\\": {
      \\"a\\": 1,
      \\"b\\": 2
    }
  }
}
"
`;

exports[`Pretty Logging Will pretty log expected JSON properties 1`] = `
"[90m┌─────────┬───────────────────────────┐[39m
[90m│[39m File    [90m│[39m [4m[32m/test/spec/pretty.test.js[39m[24m [90m│[39m
[90m├─────────┼───────────────────────────┤[39m
[90m│[39m Date    [90m│[39m [37m2018-05-18T16:25:57.815Z[39m  [90m│[39m
[90m├─────────┼───────────────────────────┤[39m
[90m│[39m Status  [90m│[39m [34mℹ info[39m                    [90m│[39m
[90m├─────────┼───────────────────────────┤[39m
[90m│[39m Message [90m│[39m [34mhello world[39m               [90m│[39m
[90m└─────────┴───────────────────────────┘[39m

"
`;
